--- a/src/app/Page/Home/cardgroup/cardgroup.component.html
+++ b/src/app/Page/Home/cardgroup/cardgroup.component.html
@@ -14,7 +14,7 @@
           </div>
         </div>
         <div class="uk-card-footer-small uk-padding-small">
-            <a class="uk-button uk-button-text" routerLink="/programa/empresa/1" routerLinkActive="active">Abrir</a>
+            <a class="uk-button uk-button-text" routerLink="/preCadastro" routerLinkActive="active">Abrir</a>
         </div>
       </div>
     </div>
