--- a/src/app/Page/ProgramaFidelidade/pre-cadatro/pre-cadatro.component.html
+++ b/src/app/Page/ProgramaFidelidade/pre-cadatro/pre-cadatro.component.html
@@ -2,7 +2,7 @@
 
     <div class="uk-card uk-card-default uk-card-body uk-width-1-1@m">
 
-        <h4 class="uk-card-title-small"> <a uk-icon="icon:chevron-double-left; ratio:1.3"></a> Pré-Cadastro de Usuários
+        <h4 class="uk-card-title-small"> <a uk-icon="icon:chevron-double-left; ratio:1.3" onClick="history.go(-1)"></a> Pré-Cadastro de Usuários
         </h4>
 
         <form>
