--- a/src/app/Page/Shared/nav/nav.component.html
+++ b/src/app/Page/Shared/nav/nav.component.html
@@ -2,7 +2,7 @@
    
     <ul class="uk-nav uk-nav uk-width-auto-small uk-padding-small " uk-sortable="cls-custom: uk-box-shadow-small uk-flex uk-flex-middle uk-background">
       
-        <li class="uk-margin-small-bottom uk-margin-small-top uk-icon  "><a href="#" uk-icon="icon: home; ratio:1.2"></a></li>
+        <li class="uk-margin-small-bottom uk-margin-small-top uk-icon  "><a  routerLink="/home" uk-icon="icon: home; ratio:1.2"></a></li>
         <li class="uk-margin-small-bottom"><a href="#" uk-icon="icon: star; ratio:1.2"></a></li>
         <li class="uk-margin-small-bottom"><a href="#" uk-icon="icon: star; ratio:1.2"></a></li>
         <li class="uk-margin-small-bottom"><a href="#" uk-icon="icon: star; ratio:1.2"></a></li>
