--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<!--app-perfil></app-perfil-->
+<!--<app-navbar></app-navbar>
 <app-nav></app-nav>
-<app-navbar></app-navbar>
-<app-cardgroup></app-cardgroup>
+
+<router-outlet></router-outlet>-->
+<router-outlet></router-outlet>
