--- a/src/app/Page/ProgramaFidelidade/config-programa/premios/premios.component.html
+++ b/src/app/Page/ProgramaFidelidade/config-programa/premios/premios.component.html
@@ -34,14 +34,10 @@
       <th> </th>
     </tr>
   </thead>
-  <tbody>
-    <tr>
-      <td>Table Premio</td>
-      <td>Table Descrição</td>
-      <td>Table Pontos</td>
-      <td>Table Quantidade</td>
-      <td><a uk-icon="icon:trash"></a></td>
-    </tr>
-
+  <tbody >
+    
   </tbody>
 </table>
+<div ngFor="let Premio of Premio$  | async  ">
+  <a></a>
+</div>
