--- a/src/app/Page/ProgramaFidelidade/perfil/perfil.component.html
+++ b/src/app/Page/ProgramaFidelidade/perfil/perfil.component.html
@@ -6,7 +6,7 @@
 
       </a> Perfil </h3>
 
-      <form>
+      <div>
           <fieldset class="uk-fieldset">
               
               <div class="js-upload uk-align-center" uk-form-custom>
@@ -70,7 +70,7 @@
       
           </div>
       
-      </form>
+      </div>
       
       </div>
       </div>
