--- a/src/app/Page/ProgramaFidelidade/pre-cadatro/pre-cadatro.component.html
+++ b/src/app/Page/ProgramaFidelidade/pre-cadatro/pre-cadatro.component.html
@@ -5,35 +5,35 @@
         <h4 class="uk-card-title-small"> <a uk-icon="icon:chevron-double-left; ratio:1.3" onClick="history.go(-1)"></a> Pré-Cadastro de Usuários
         </h4>
 
-        <form>
-            <fieldset class="uk-fieldset">
+        <div>
+            <div class="uk-fieldset">
         
                 <div class="uk-margin">
-                    <div class="uk-form-controls">
+                    <div class="uk-form">
                         <input class="uk-input" id="form-stacked-text" type="text" placeholder="Nome cliente">
                     </div>
                 </div>
         <div class="uk-grid uk-grid-large uk-child-width-expand@s uk-text-center" uk-grid>
                 <div class="uk-margin-1-2@m"> 
-                        <div class="uk-form-controls">
+                        <div class="uk-form">
                             <input class="uk-input" id="form-stacked-text" type="text" placeholder="CPF">
                         </div>
                     </div>
 
                     <div class="uk-margin-1-2@m">
-                            <div class="uk-form-controls">
+                            <div class="uk-form">
                                 <input class="uk-input" id="form-stacked-text" type="text" placeholder="Telefone">
                             </div>
                         </div>
                     </div>
-            </fieldset>
+            </div>
             <div class="uk-align-right@s uk-margin-top">
         
                 <button class="uk-button uk-button-primary">Cadastrar</button>
         
             </div>
         
-        </form>
+        </div>
         
         </div>
         </div>
