--- a/src/app/Page/Shared/nav/nav.component.html
+++ b/src/app/Page/Shared/nav/nav.component.html
@@ -1,6 +1,6 @@
-<div  class="uk-visible@s uk-heightuk-height-1-1 uk-padding-remove-bottom uk-position-left uk-overlay-default uk-margin-large-top uk-flex-middle ">
-   
-    <ul class="uk-nav uk-nav uk-width-auto-small uk-padding-small " uk-sortable="cls-custom: uk-box-shadow-small uk-flex uk-flex-middle uk-background">
+<div  class="uk-visible@m uk-heightuk-height-1-1 uk-padding-remove-bottom uk-position-left uk-overlay-default uk-margin-large-top uk-flex-middle ">
+   <!--MENU LATERAL-->
+    <ul class="uk-nav uk-nav uk-width-auto uk-padding-small uk-iconnav uk-iconnav-vertical" uk-sortable="cls-custom: uk-box-shadow-small uk-flex uk-flex-middle uk-background">
       
         <li class="uk-margin-small-bottom uk-margin-small-top uk-icon  "><a  routerLink="/home" uk-icon="icon: home; ratio:1.2"></a></li>
         <li class="uk-margin-small-bottom"><a href="#" uk-icon="icon: star; ratio:1.2"></a></li>
