--- a/src/app/Page/Account/cadastrar-login/cadastrar-login.component.html
+++ b/src/app/Page/Account/cadastrar-login/cadastrar-login.component.html
@@ -1,29 +1,26 @@
 <div class="uk-flex-center FundoLogin" uk-grid>
-  <div class="uk-width-1-3@m ">
+  <div class="uk-width-1-2@m ">
     <div class="uk-text-center uk-margin-top uk-margin-small uk-light">
       <a class=" uk-text-large uk-active uk-link-heading " style="font-family:Cocon">pontua <a style="font-family:Lucida Handwriting"> Aê</a>
     </a>
     </div>
-    
+    <app-carregar *ngIf="carregando"></app-carregar>
+    <form [formGroup]="form" *ngIf="!carregando">
     <div class="uk-card uk-card-default  uk-card-body uk-box-shadow-small uk-border-rounded">
         <a><span uk-icon="icon:arrow-left"class=""></span> Voltar</a>
-      <h3 class="uk-card-title uk-margin-small">         Cadastre-se</h3>
+      <h3 class="uk-card-title uk-position-top-center">Cadastre-se</h3>
       <div class="uk-margin">
-        <input class="uk-input uk-form-large" type="text" placeholder="Nome">
+        <input class="uk-input uk-form-large" type="text"type="text" formControlName="Email"
+         [ngClass]="{'uk-form-danger': (!form.controls.Email.valid && !form.controls.Email.pristine) }" placeholder="Email">
       </div>
       <div class="uk-margin">
-        <input class="uk-input uk-form-large" type="text" placeholder="Cnpj">
+        <input class="uk-input uk-form-large" type="password" formControlName="Senha"[ngClass]="{'uk-form-danger': (!form.controls.Senha.valid && !form.controls.Senha.pristine)}" placeholder="Senha">
       </div>
-      <div class="uk-margin">
-        <input class="uk-input uk-form-large" type="email" placeholder="E-mail">
-      </div>
-      <div class="uk-margin">
-        <input class="uk-input uk-form-large" type="password" placeholder="Senha">
-      </div>
-           <div class="uk-margin uk-text-right">
-        <a href="" class="uk-button uk-button-primary uk-width-1-1 uk-margin-small-bottom">Cadastrar</a>
+      
+      <div class="uk-margin uk-text-right">
+        <a (click)="submit()" class="uk-width-1-1@m uk-button-large uk-button  uk-border-rounded BotaoSucesso">Continuar</a>
       </div>
     </div>
-    
+  </form>
   </div>
 </div>
