--- a/src/app/Page/Account/login/login.component.html
+++ b/src/app/Page/Account/login/login.component.html
@@ -4,24 +4,33 @@
       <a class=" uk-text-large uk-active uk-link-heading " style="font-family:Cocon">pontua <a style="font-family:Lucida Handwriting"> Aê</a>
     </a>
     </div>
-
-    <div class="uk-card uk-card-default  uk-card-body  uk-border-rounded">
+<app-carregar *ngIf="carregando" ></app-carregar>
+   <form [formGroup]="form">
+    <div class="uk-card uk-card-default  uk-card-body uk-border-rounded">
       <h3 class="uk-card-title">Autentique-se</h3>
       <div class="uk-margin">
-        <input class="uk-input uk-form-large" type="email" placeholder="E-mail">
+        <input class="uk-input uk-form-large" formControlName="Email"  type="text" [ngClass]="{'uk-form-danger': (!form.controls.Email.valid && !form.controls.Email.pristine) }"  placeholder="Email">
       </div>
       <div class="uk-margin">
-        <input class="uk-input uk-form-large" type="password" placeholder="Senha">
+        <input class="uk-input uk-form-large" formControlName="Senha" type="password" [ngClass]="{'uk-form-danger': (!form.controls.Senha.valid && !form.controls.Senha.pristine)}"  placeholder="Senha">
       </div>
+
       <a href="" class="">Esqueci minha senha</a>
       <div class="uk-margin uk-text-right">
-        <a href="" class="uk-button uk-button-default">Entrar</a>
+        <button class="uk-button uk-button-default" [disabled]="form.invalid" (click)="submit()">Entrar
+        </button>
+      </div>
+      <div class="uk-padding-small-bottom">
+        <p class="uk-text-center">
+          <a href="/cadastrar" class="uk-width-1-1@m uk-button-large uk-button  uk-border-rounded BotaoSucesso">Quero me Cadastrar</a>
+          <br>
+    
+        </p>
       </div>
     </div>
-    <p class="uk-text-center">
-      <a href="/cadastrar" class=" uk-width-1-1@m uk-button-large uk-button uk-button-primary uk-border-rounded uk-margin-small-bottom">Quero me Cadastrar</a>
-      <br>
 
-    </p>
+  </form>
+
+
   </div>
 </div>
