--- a/src/app/Page/ProgramaFidelidade/config-programa/config-programa.component.html
+++ b/src/app/Page/ProgramaFidelidade/config-programa/config-programa.component.html
@@ -4,7 +4,7 @@
         <h5 class="uk-card-title"> <a uk-icon="icon:chevron-double-left; ratio:1.3"></a> Configuração programa fidelidade</h5>
   <ul uk-tab>
     <li><a routerLink="/config/regra/1" routerLinkActive="active">regra</a></li>
-    <li><a routerLink="/config/premios/1" routerLinkActive="active">premios</a></li>
+    <li><a routerLink="/config/premios/1" routerLinkActive="active">prêmios</a></li>
   </ul>
 
   <router-outlet></router-outlet>
