--- a/src/app/Page/ProgramaFidelidade/pontuacao/pontuacao.component.html
+++ b/src/app/Page/ProgramaFidelidade/pontuacao/pontuacao.component.html
@@ -6,7 +6,7 @@
      Pontuação 
     </h4>
 
-    <form>
+    <div >
       <fieldset class="uk-fieldset">
 
         <div class="uk-grid uk-grid-large uk-child-width-expand@s uk-text-center" uk-grid>
@@ -29,7 +29,7 @@
         <button class="uk-button uk-button-secondary">Resgatar</button>
       </div>
 
-    </form>
+    </div>
 
   </div>
 </div>
