--- a/src/styles.css
+++ b/src/styles.css
@@ -2,8 +2,8 @@
     
 text-align: center;
 background: #9a06ad;
-background: -moz-linear-gradient(60deg, #9a06ad 0%,#f0bb6c 100%);
-background: -webkit-linear-gradient(60deg, #9a06ad 0%,#f0bb6c 100%);
+background: -moz-linear-gradient(60deg,#bd076b 0%,#800691 100%);
+background: -webkit-linear-gradient(60deg,#bd076b 0%,#800691 100%);
 background: linear-gradient(60deg,#bd076b 0%,#800691 100%);
 }
 .autoHeight{
@@ -12,4 +12,8 @@ background: linear-gradient(60deg,#bd076b 0%,#800691 100%);
 .FundoLogin{
     height: 100vh;
     background: linear-gradient(60deg,#bd076b 0%,#800691 100%);
+}
+.BotaoSucesso{
+    background-color:#3fa845;
+    color: white;
 }
