fazendo o criar perfil

--- a/src/app/Page/Home/cardgroup/cardgroup.component.html
+++ b/src/app/Page/Home/cardgroup/cardgroup.component.html
@@ -62,15 +62,15 @@
           <div class="uk-card-header">
             <div class="uk-grid-small " uk-grid>
               <div class="uk-width-auto">
-                <span class="uk--primary " uk-icon="icon:users; ratio:1.6 "></span>
+                <span class="uk--primary " uk-icon="icon:cog; ratio:1.6 "></span>
               </div>
               <div class="uk-width-expand">
-                <h3 class="uk-card-title uk-margin-remove-bottom">VAZIO  </h3>
+                <h3 class="uk-card-title uk-margin-remove-bottom">Configurações  </h3>
               </div>
             </div>
           </div>
           <div class="uk-card-footer-small uk-padding-small">
-            <a href="#" class="uk-button uk-button-text">Abrir</a>
+            <a routerLink="/config" class="uk-button uk-button-text">Abrir</a>
           </div>
         </div>
       </div>
