--- a/src/app/Page/Shared/navbar/navbar.component.html
+++ b/src/app/Page/Shared/navbar/navbar.component.html
@@ -5,28 +5,26 @@
     <a class="uk-navbar-toggle uk-margin-small-right uk-margin-small-left" uk-toggle="target: #offcanvas-overlay" href="#">
       <span uk-navbar-toggle-icon></span>
     </a>
-    <a class=" uk-text-large uk-active uk-link-heading" style="font-family:Cocon">pontua <a style="font-family:Lucida Handwriting"> Aê</a></a>
+    <a routerLink="/home" class=" uk-text-large uk-active uk-link-heading" style="font-family:Cocon">pontua <a style="font-family:Lucida Handwriting"> Aê</a></a>
   </div>
           <!--  --MENU HORIZONTAL--   -->
   <div class="uk-navbar-right">
      
     <ul class="uk-navbar-nav">
-      <li class="uk-active"><a href="#">Active</a></li>
+
       <li class="uk-active"><a href="#">{{ user.email }}</a></li>
       <li class="uk-active">
-        <a href="#">Parent</a>
       </li>
       <li>
         <a  href="#" ><span class="uk-icon-button uk-icon" uk-icon="icon: cog"></span></a>
         <div class="uk-navbar-dropdown">
           <ul class="uk-nav uk-navbar-dropdown-nav">
-            <li class="uk-active"><a href="#">Active</a></li>
-            <li><a href="#">Item</a></li>
-            <li class="uk-nav-header">Header</li>
-            <li><a href="#">Item</a></li>
+            <li class="uk-active"><a href="">Menu</a></li>
+            <li><a routerLink="/perfil">Perfil</a></li>
+            <li><a routerLink="/config/regra/:id">Configuração de Programa fidelidade</a></li>
             <li><a href="#">Item</a></li>
             <li class="uk-nav-divider"></li>
-            <li><a (click)="Logout()">Sair</a></li>
+            <li><a id="red" (click)="Logout()">Sair</a></li>
           </ul>
         </div>
       </li>
