--- a/src/app/Page/Account/login/login.component.html
+++ b/src/app/Page/Account/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="uk-flex-center FundoLogin " uk-grid>
+<div class="uk-flex-center FundoLogin autoHeight" uk-grid>
   <div class="uk-width-1-3@s">
     <div class="uk-text-center uk-margin-large-top uk-margin-medium-bottom uk-light ">
       <a class=" uk-text-large uk-active uk-link-heading " style="font-family:Cocon">pontua <a style="font-family:Lucida Handwriting"> Aê</a>
