--- a/src/app/Page/Account/add-perfil/add-perfil.component.html
+++ b/src/app/Page/Account/add-perfil/add-perfil.component.html
@@ -1,9 +1,10 @@
 <div class="uk-flex-center FundoLogin uk-height-1-1  " uk-grid>
   <div class="uk-width-1-2@s ">
     <div class="uk-text-center uk-margin-large-top uk-margin-medium-bottom uk-light ">
-      <a class=" uk-text-large uk-active uk-link-heading " style="font-family:Cocon">pontua <a style="font-family:Lucida Handwriting"> Aê</a>
-    </a>
-  </div>
+      <a class=" uk-text-large uk-active uk-link-heading " style="font-family:Cocon">pontua <a
+          style="font-family:Lucida Handwriting"> Aê</a>
+      </a>
+    </div>
     <!--<app-carregar></app-carregar>-->
     <form [formGroup]="form" *ngIf="!carregando">
       <div class="uk-card uk-card-default  uk-card-body  uk-border-rounded">
@@ -12,18 +13,18 @@
 
         <div class="uk-margin">
           <input class="uk-input uk-form-large" type="text" formControlName="NomeFantasia"
-          [ngClass]="{'uk-form-danger': (!form.controls.NomeFantasia.valid && !form.controls.NomeFantasia.pristine) }"
-          placeholder="NomeFantasia">
+            [ngClass]="{'uk-form-danger': (!form.controls.NomeFantasia.valid && !form.controls.NomeFantasia.pristine) }"
+            placeholder="Nome Comercial" />
         </div>
         <div class="uk-margin">
           <input class="uk-input uk-form-large" type="text" formControlName="Descricao"
-          [ngClass]="{'uk-form-danger': (!form.controls.Descricao.valid && !form.controls.Descricao.pristine) }"
-          placeholder="Descricao">
+            [ngClass]="{'uk-form-danger': (!form.controls.Descricao.valid && !form.controls.Descricao.pristine) }"
+            placeholder="Descrição">
         </div>
         <div class="uk-margin">
-          <input class="uk-input " type="text" formControlName="NomeResponsavel"
-          [ngClass]="{'uk-form-danger': (!form.controls.NomeResponsavel.valid && !form.controls.NomeResponsavel.pristine) }"
-            placeholder="Nome Responsavel">
+          <input class="uk-input uk-form-large " type="text" formControlName="NomeResponsavel"
+            [ngClass]="{'uk-form-danger': (!form.controls.NomeResponsavel.valid && !form.controls.NomeResponsavel.pristine) }"
+            placeholder="Nome Responsável">
         </div>
         <div class="uk-margin">
           <input class="uk-input uk-form-large" type="text" type="text" formControlName="Email"
@@ -32,73 +33,120 @@
         </div>
         <div class="uk-margin">
           <input class="uk-input uk-form-large" type="text" formControlName="Telefone"
-          [ngClass]="{'uk-form-danger': (!form.controls.Telefone.valid && !form.controls.Telefone.pristine) }" placeholder="Telefone">
+            [ngClass]="{'uk-form-danger': (!form.controls.Telefone.valid && !form.controls.Telefone.pristine) }"
+            placeholder="Telefone">
         </div>
         <div class="uk-margin">
           <input class="uk-input uk-form-large" type="text" formControlName="Documento"
-          [ngClass]="{'uk-form-danger': (!form.controls.Documento.valid && !form.controls.Documento.pristine) }" placeholder="Cnpj">
+            [ngClass]="{'uk-form-danger': (!form.controls.Documento.valid && !form.controls.Documento.pristine) }"
+            placeholder="Cnpj">
         </div>
         <div class="uk-margin">
           <input class="uk-input uk-form-large" type="text" formControlName="Seguimento"
-          [ngClass]="{'uk-form-danger': (!form.controls.Seguimento.valid && !form.controls.Seguimento.pristine) }"
-          placeholder="Seguimentos">
+            [ngClass]="{'uk-form-danger': (!form.controls.Seguimento.valid && !form.controls.Seguimento.pristine) }"
+            placeholder="Seguimentos">
         </div>
         <div class="uk-margin">
           <input class="uk-input uk-form-large" type="text" formControlName="Horario"
-          [ngClass]="{'uk-form-danger': (!form.controls.Horario.valid && !form.controls.Horario.pristine) }"
+            [ngClass]="{'uk-form-danger': (!form.controls.Horario.valid && !form.controls.Horario.pristine) }"
             placeholder="Horario de Atendimento">
         </div>
         <div class="uk-margin">
-          <input class="uk-input uk-form-large" type="text" formControlName="Facebook"
-          [ngClass]="{'uk-form-danger': (!form.controls.Facebook.valid && !form.controls.Facebook.pristine) }" placeholder="Link do Facebook">
+          <input class="uk-input uk-form-large" type="text" formControlName="Facebook" 
+          [ngClass]="{'uk-form-danger': (!form.controls.Facebook.valid && !form.controls.Facebook.pristine) }"
+          placeholder="Link do seu Facebook">
         </div>
         <div class="uk-margin">
-          <input class="uk-input uk-form-large" type="text" formControlName="Instagram" placeholder="Link do Instagram">
+          <input class="uk-input uk-form-large" type="text" formControlName="Instagram"
+            [ngClass]="{'uk-form-danger': (!form.controls.Instagram.valid && !form.controls.Horario.pristine) }"
+            placeholder="Link do seu Instagram">
         </div>
         <div class="uk-margin">
-          <input class="uk-input uk-form-large" type="text" formControlName="WebSite" placeholder="Link do Website">
+          <input class="uk-input uk-form-large" type="text" formControlName="WebSite"
+            [ngClass]="{'uk-form-danger': (!form.controls.WebSite.valid && !form.controls.WebSite.pristine) }"
+            placeholder="Link do seu Website">
         </div>
         <div class="uk-margin">
-          <input class="uk-input uk-form-large" type="text" formControlName="Delivery" placeholder="Link da Delivery">
+          <input class="uk-input uk-form-large" type="text" formControlName="Delivery"
+            [ngClass]="{'uk-form-danger': (!form.controls.Delivery.valid && !form.controls.Delivery.pristine) }"
+            placeholder="Link da Delivery">
         </div>
         <div class="uk-margin">
-          <input class="uk-input uk-form-large" type="text" formControlName="Bairro" placeholder="Bairro">
+          <input class="uk-input uk-form-large" type="text" formControlName="Bairro"
+            [ngClass]="{'uk-form-danger': (!form.controls.Bairro.valid && !form.controls.Bairro.pristine) }"
+            placeholder="Bairro">
         </div>
         <div class="uk-margin">
-          <input class="uk-input uk-form-large" type="text" formControlName="Rua" placeholder="Rua">
+          <input class="uk-input uk-form-large" type="text" formControlName="Rua"
+            [ngClass]="{'uk-form-danger': (!form.controls.Rua.valid && !form.controls.Rua.pristine) }"
+            placeholder="Rua">
         </div>
         <div class="uk-margin">
-          <input class="uk-input uk-form-large" type="text" formControlName="Numero" placeholder="Numero do endereço">
+          <input class="uk-input uk-form-large" type="text" formControlName="Numero"
+            [ngClass]="{'uk-form-danger': (!form.controls.Numero.valid && !form.controls.Numero.pristine) }"
+            placeholder="Numero de endereço">
         </div>
         <div class="uk-margin">
-          <input class="uk-input uk-form-large" type="text" formControlName="Cep" placeholder="Cep">
+          <input class="uk-input uk-form-large" type="text" formControlName="Cep"
+            [ngClass]="{'uk-form-danger': (!form.controls.Cep.valid && !form.controls.Cep.pristine) }"
+            placeholder="Cep">
         </div>
         <div class="uk-margin">
-          <input class="uk-input uk-form-large" type="text" formControlName="Cidade" placeholder="Cidade">
+          <input class="uk-input uk-form-large" type="text" formControlName="Cidade"
+            [ngClass]="{'uk-form-danger': (!form.controls.Cidade.valid && !form.controls.Horario.pristine) }"
+            placeholder="Cidade">
         </div>
         <div class="uk-margin">
-          <input class="uk-input uk-form-large" type="text" formControlName="Estado" placeholder="Estado">
+          <select class="uk-select" type="text" formControlName="Estado" placeholder="Estado">
+            <option value="">Selecione o seu Estado</option>
+            <option>Acre (AC)
+            <option>Alagoas (AL)</option>
+            <option>Amapá (AP)</option>
+            <option>Amazonas (AM)</option>
+            <option>Bahia (BA)</option>
+            <option>Ceará (CE)</option>
+            <option>Distrito Federal (DF)</option>
+            <option> Santo (ES)</option>
+            <option>Goiás (GO)</option>
+            <option>Maranhão (MA)</option>
+            <option>Mato Grosso (MT)</option>
+            <option>Mato Grosso do Sul (MS)</option>
+            <option> Gerais (MG)</option>
+            <option>Pará (PA) </option>
+            <option>Paraíba (PB)</option>
+            <option>Paraná (PR)</option>
+            <option>Pernambuco (PE)</option>
+            <option>Piauí (PI)</option>
+            <option>Rio de Janeiro (RJ)</option>
+            <option>Rio Grande do Norte (RN)</option>
+            <option>Rio Grande do Sul (RS)</option>
+            <option>Rondônia (RO)</option>
+            <option>Roraima (RR)</option>
+            <option>Santa Catarina (SC)</option>
+            <option>São Paulo (SP)</option>
+            <option>Sergipe (SE)</option>
+            <option>Tocantins (TO)</option>
+          </select>
         </div>
         <div class="uk-margin">
-          <input class="uk-input uk-form-large" type="text" formControlName="Complemento" placeholder="Complemento">
+          <input class="uk-input uk-form-large" type="text" formControlName="Complemento" 
+          placeholder="Complemento">
         </div>
-        <!--<ul class="uk-thumbnav" uk-margin>
-            <img class="uk-border-circle" src= "assets/img/sualogo.png" width="70" height="70" alt="">
-           </ul>-->
 
 
         <div class="js-upload uk-align-center" uk-form-custom>
-          <input type="file" (change)="onUploadImagem($event)" multiple>
-          <button class="uk-button uk-button-primary uk-button-small  uk-margin-small-right  uk-margin-small-   uk-border-rounded"  type="button" tabindex="-1" >Anexa Logo Marca</button>
+          <input type="file" (change)="onUploadImagem($event)" formControlName="event" >
+    
+          <button
+            class="uk-button uk-button-primary uk-button-small  uk-margin-small-right  uk-margin-small-   uk-border-rounded"
+            type="button" tabindex="-1">Anexa  Logo Marca</button>
 
         </div>
-        <!--
-        <div class= "uk-column-1-4">
-          <span class="upload" *ngIf="message">{{message}}</span>
-        </div>-->
+
 
         <div class="uk-margin uk-text-right">
-          <a class="uk-width-1-1@m uk-button-large uk-button  uk-border-rounded BotaoSucesso" (click)="submit()">Salvar</a>
+          <button class="uk-width-1-1@m uk-button-large uk-button  uk-border-rounded BotaoSucesso" [disabled]=""
+            (click)="submit()">Salvar</button>
         </div>
       </div>
     </form>
