--- a/src/app/Page/ProgramaFidelidade/pontuacao/pontuacao.component.html
+++ b/src/app/Page/ProgramaFidelidade/pontuacao/pontuacao.component.html
@@ -3,33 +3,19 @@
   <div class="uk-card uk-card-default uk-card-body uk-width-1-1@m">
 
     <h4 class="uk-card-title-small"> <a uk-icon="icon:chevron-double-left; ratio:1.3" onClick="history.go(-1)"></a>
-     Pontuação 
+      Pontuação
     </h4>
+    <div class="uk-child-width-1-2@s uk-grid-small uk-text-center" uk-grid>
+      
+      <app-pontuar></app-pontuar>
+      <app-resgatar></app-resgatar>
 
-    <div >
-      <fieldset class="uk-fieldset">
-
-        <div class="uk-grid uk-grid-large uk-child-width-expand@s uk-text-center" uk-grid>
-          <div class="uk-margin-1-2@m">
-            <div class="uk-form-controls">
-              <input class="uk-input" id="form-stacked-text" type="text" placeholder="CPF">
-            </div>
-          </div>
-
-          <div class="uk-margin-1-2@m">
-            <div class="uk-form-controls">
-              <input class="uk-input" id="form-stacked-text" type="text" placeholder="Digite o valor gasto">
-            </div>
-          </div>
-        </div>
-      </fieldset>
-      <div class=" uk-child-width-1-2@m uk-text-center uk-margin-top">
-
-        <button class="uk-button uk-button-primary">Pontuar</button>
-        <button class="uk-button uk-button-secondary">Resgatar</button>
-      </div>
-
+      
     </div>
 
+    <div class="uk-grid-match uk-grid-small uk-text-center" uk-grid>
+      <div class="uk-width-auto@m uk-visible@l">
+          <div class="uk-card uk-card-primary uk-card-body">auto@m<br>visible@l</div>
+      </div>
   </div>
 </div>
