Versão 8 Anguala Versão 3.4.5 TypeScript

--- a/src/app/Page/ProgramaFidelidade/pontuacao/regatar/regatar.component.html
+++ b/src/app/Page/ProgramaFidelidade/pontuacao/regatar/regatar.component.html
@@ -1,4 +1,24 @@
 <div class="uk-card uk-card-default uk-card-body uk-width-1-1@m">
-  <h3 class="uk-card-title">Default</h3>
-  <p>Lorem ipsum <a href="#">dolor</a> sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+  <h3 class="uk-card-title uk-text-center">Resgatar</h3>
+
+  <form [formGroup]="form" class="uk-form-stacked">
+
+    <div class="uk-margin">
+      <label class="uk-form-label " for="form-stacked-text">Nº de Telefone</label>
+      <div class="uk-form-controls">
+        <input class="uk-input"  mask="(00) 00000-0000" formControlName="Telefone" id="form-stacked-text" type="text"
+          placeholder="Some text...">
+      </div>
+    </div>
+    <div class="uk-margin">
+      <label class="uk-form-label" for="form-stacked-text">Codigo Produto</label>
+      <div class="uk-form-controls">
+        <input class="uk-input" formControlName="CodPremio" id="form-stacked-text" type="text"
+          placeholder="Some text...">
+      </div>
+    </div>
+
+    <button class="uk-button uk-button-primary" (click)="Submit()">Salvar</button>
+  </form>
 </div>
