--- a/src/app/Page/Shared/nav/nav.component.html
+++ b/src/app/Page/Shared/nav/nav.component.html
@@ -1,4 +1,4 @@
-<div  class="uk-visible@m uk-heightuk-height-1-1 uk-padding-remove-bottom uk-position-left uk-overlay-default uk-margin-large-top uk-flex-middle ">
+<div *ngIf="!show" class="uk-visible@m uk-heightuk-height-1-1 uk-padding-remove-bottom uk-position-left uk-overlay-default uk-margin-large-top uk-flex-middle ">
    <!--MENU LATERAL-->
     <ul class="uk-nav uk-nav uk-width-auto uk-padding-small uk-iconnav uk-iconnav-vertical" uk-sortable="cls-custom: uk-box-shadow-small uk-flex uk-flex-middle uk-background">
       
