--- a/src/styles.css
+++ b/src/styles.css
@@ -11,7 +11,10 @@ background: linear-gradient(60deg,#bd076b 0%,#800691 100%);
 }
 .FundoLogin{
    
-    background: linear-gradient(60deg,#bd076b 0%,#800691 100%);
+    background: linear-gradient(60deg,#d6085e  25%,#800691 100%);
+
+
+    
 }
 .BotaoSucesso{
     background-color:#3fa845;
@@ -25,4 +28,7 @@ background: linear-gradient(60deg,#bd076b 0%,#800691 100%);
     color:#28a745;
     margin-left: 15px;
     line-height: 36px;
+}
+.embacado::after{
+    filter: blur(2px);
 }
