--- a/src/app/Page/AccountCliente/login-cliente/login-cliente.component.html
+++ b/src/app/Page/AccountCliente/login-cliente/login-cliente.component.html
@@ -1,12 +1,12 @@
-<div class="uk-flex-center FundoLogin autoHeight" uk-grid>
-  <div class="uk-width-1-3@s">
+<div class="uk-flex-center FundoLogin embacado autoHeight" uk-grid>
+  <div class="uk-width-1-3@s conteudo">
     <div class="uk-text-center uk-margin-large-top uk-margin-medium-bottom uk-light ">
       <a class=" uk-text-large uk-active uk-link-heading " style="font-family:Cocon">pontua <a style="font-family:Lucida Handwriting"> Aê</a>
     </a>
     </div>
 <app-carregar *ngIf="carregando" ></app-carregar>
-   <form [formGroup]="form">
-    <div class="uk-card uk-card-default  uk-card-body uk-border-rounded">
+   <form [formGroup]="form" class="desmbacado">
+    <div class="uk-card uk-card-default   uk-card-body uk-border-rounded">
       <h3 class="uk-card-title">Autentique-se</h3>
       <div class="uk-margin">
         <input class="uk-input uk-form-large" formControlName="Email"  type="text" [ngClass]="{'uk-form-danger': (!form.controls.Email.valid && !form.controls.Email.pristine) }"  placeholder="Email">
@@ -17,12 +17,12 @@
 
       <a href="" class="">Esqueci minha senha</a>
       <div class="uk-margin uk-text-right">
-        <button class="uk-button uk-button-default" [disabled]="form.invalid" (click)="submit()" (click)="displayBanner()">Entrar
+        <button class="uk-button uk-button-default" [disabled]="form.invalid" (click)="submit()">Entrar
         </button>
       </div>
       <div class="uk-padding-small-bottom">
         <p class="uk-text-center">
-          <a href="/cadastrar" class="uk-width-1-1@m uk-button-large uk-button  uk-border-rounded BotaoSucesso">Quero me Cadastrar</a>
+          <a href="/cadastrarCliente" class="uk-width-1-1@m uk-button-large uk-button  uk-border-rounded BotaoSucesso">Quero me Cadastrar</a>
           <br>
     
         </p>
