--- a/src/app/Page/ProgramaFidelidade/pontuacao/pontuacao.component.html
+++ b/src/app/Page/ProgramaFidelidade/pontuacao/pontuacao.component.html
@@ -5,7 +5,7 @@
     <h4 class="uk-card-title-small"> <a uk-icon="icon:chevron-double-left; ratio:1.3" onClick="history.go(-1)"></a>
       Pontuação
     </h4>
-    <div class="uk-child-width-1-2@s uk-grid-small uk-text-center" uk-grid>
+    <div class="uk-child-width-1-2@s uk-grid-small " uk-grid>
       
       <app-pontuar></app-pontuar>
       <app-resgatar></app-resgatar>
