Lista de premios / Bonificação/ Listar Imagem com saldo

--- a/src/app/Page/Home/listar-empresas/listar-empresas.component.html
+++ b/src/app/Page/Home/listar-empresas/listar-empresas.component.html
@@ -1,13 +1,21 @@
-<div class="uk-container uk-margin-top">
-    <div class="uk-child-width-expand@s uk-text-center" uk-grid>
-
-        <div class="uk-flex uk-flex-center" *ngFor="let empresa of empresas">
-            
-            <div class="uk-card uk-card-default uk-card-body">{{ empresa.nomeFantasia }}</div>
-        
+<div class="uk-flex-center uk-child-width-1-5@m uk-padding" uk-grid>
+  <div *ngFor="let ListaSaldo of ListaSaldos | slice: 0:5">
+    <div class="uk-card uk-card-small uk-card-default uk-card-body">
+      <div class="uk-inline-clip uk-transition-toggle" tabindex="0">
+        <img src="{{ URL_IMG + '/Dados/imgEmpresa/' + ListaSaldo.logo }} " />
+        <div
+          class="uk-transition-slide-bottom uk-position-bottom uk-overlay uk-overlay-default"
+        >
+          <h4 class="uk-card-title uk-text-truncate ">
+            {{ ListaSaldo.nomeFantasia }}
+          </h4>
         </div>
-
-        
- 
-</div>
+      </div>
+      <p class=" uk-text-right  uk-h4 uk-margin">
+        <span class="uk-text-success">
+          {{ ListaSaldo.saldo + " pontos " }}
+        </span>
+      </p>
+    </div>
+  </div>
 </div>
