--- a/src/app/Page/Home/cardgroup/cardgroup.component.html
+++ b/src/app/Page/Home/cardgroup/cardgroup.component.html
@@ -1,53 +1,60 @@
 <div class="uk-container uk-margin-top">
-
   <div class="uk-child-width-expand@s uk-text-center" uk-grid>
     <div>
       <div class="uk-card uk-card-default ">
         <div class="uk-card-header">
           <div class="uk-grid-small " uk-grid>
             <div class="uk-width-auto">
-              <span class="uk--primary " uk-icon="icon:users; ratio:1.6 "></span>
+              <span
+                class="uk--primary "
+                uk-icon="icon:users; ratio:1.6 "
+              ></span>
             </div>
             <div class="uk-width-expand">
-              <h3 class="uk-card-title uk-margin-remove-bottom">Cadastrar </h3>
+              <h3 class="uk-card-title uk-margin-remove-bottom">Cadastrar</h3>
             </div>
           </div>
         </div>
         <div class="uk-card-footer-small uk-padding-small">
-            <a class="uk-button uk-button-text" routerLink="/preCadastro" routerLinkActive="active">Abrir</a>
+          <a
+            class="uk-button uk-button-text"
+            routerLink="/preCadastro"
+            routerLinkActive="active"
+            >Abrir</a
+          >
         </div>
       </div>
     </div>
-    
+
     <div>
-        <div class="uk-card uk-card-default ">
-          <div class="uk-card-header">
-            <div class="uk-grid-small " uk-grid>
-              <div class="uk-width-auto">
-                <span class="" uk-icon="icon:happy; ratio:1.6 "></span>
-              </div>
-              <div class="uk-width-expand">
-                <h3 class="uk-card-title uk-margin-remove-bottom">Pontuar/Prêmiar </h3>
-              </div>
+      <div class="uk-card uk-card-default ">
+        <div class="uk-card-header">
+          <div class="uk-grid-small " uk-grid>
+            <div class="uk-width-auto">
+              <span class="" uk-icon="icon:happy; ratio:1.6 "></span>
+            </div>
+            <div class="uk-width-expand">
+              <h3 class="uk-card-title uk-margin-remove-bottom">
+                Pontuar/Prêmiar
+              </h3>
             </div>
           </div>
-          <div class="uk-card-footer-small uk-padding-small">
-            <a href="#" class="uk-button uk-button-text">Abrir</a>
-          </div>
+        </div>
+        <div class="uk-card-footer-small uk-padding-small">
+          <a routerLink="/pontuacao" class="uk-button uk-button-text">Abrir</a>
         </div>
       </div>
-      
+    </div>
 
-
-  <div>
-    <div class="uk-card uk-card-default ">
-      <div class="uk-card-header">
+    <div>
+      <div class="uk-card uk-card-default ">
+        <div class="uk-card-header">
           <div class="uk-grid-small " uk-grid>
             <div class="uk-width-auto">
               <span class="uk--primary " uk-icon="icon: rss; ratio:1.6 "></span>
             </div>
             <div class="uk-width-expand">
-              <h3 class="uk-card-title uk-margin-remove-bottom">Automações </h3>
+              <h3 class="uk-card-title uk-margin-remove-bottom">Automações</h3>
             </div>
           </div>
         </div>
@@ -58,23 +65,23 @@
     </div>
 
     <div>
-        <div class="uk-card uk-card-default ">
-          <div class="uk-card-header">
-            <div class="uk-grid-small " uk-grid>
-              <div class="uk-width-auto">
-                <span class="uk--primary " uk-icon="icon:cog; ratio:1.6 "></span>
-              </div>
-              <div class="uk-width-expand">
-                <h3 class="uk-card-title uk-margin-remove-bottom">Configurações  </h3>
-              </div>
+      <div class="uk-card uk-card-default ">
+        <div class="uk-card-header">
+          <div class="uk-grid-small " uk-grid>
+            <div class="uk-width-auto">
+              <span class="uk--primary " uk-icon="icon:cog; ratio:1.6 "></span>
+            </div>
+            <div class="uk-width-expand">
+              <h3 class="uk-card-title uk-margin-remove-bottom">
+                Configurações
+              </h3>
             </div>
           </div>
-          <div class="uk-card-footer-small uk-padding-small">
-            <a routerLink="/config" class="uk-button uk-button-text">Abrir</a>
-          </div>
+        </div>
+        <div class="uk-card-footer-small uk-padding-small">
+          <a routerLink="/config" class="uk-button uk-button-text">Abrir</a>
         </div>
       </div>
-
     </div>
-    </div>
- 
+  </div>
+</div>
