--- a/src/app/Page/settings/program-loyalty/program-loyalty.component.html
+++ b/src/app/Page/settings/program-loyalty/program-loyalty.component.html
@@ -1,11 +1,10 @@
 <div class="uk-container">
-  <br>
-  <h4 class="uk-card-title"> <a uk-icon="icon:chevron-double-left; ratio:2"></a> Programa fidelidade</h4>
-  <div class="uk-card uk-card-default uk-card-body uk-width-1-1@m uk-margin-top">
 
+  <div class="uk-card uk-card-default uk-card-body uk-width-1-1@m uk-margin-top">
+    <h4 class="uk-card-title"> <a uk-icon="icon:chevron-double-left; ratio:2"></a> Programa fidelidade</h4>
     <ul class="uk-tab">
-      <li class="uk-active"><a routerLink="/con/listPunctuation">Cartões Promoções</a></li>
-      <li><a routerLink="/con/listAward">prêmios</a></li>
+      <li class="uk-active"><a routerLink="/con/listPunctuation" aria-expanded="false">Cartões Promoções</a></li>
+      <li ><a routerLink="/con/listAward">prêmios</a></li>
     </ul>
 
     <router-outlet></router-outlet>
