--- a/src/app/Page/Home/cardgroup/cardgroup.component.html
+++ b/src/app/Page/Home/cardgroup/cardgroup.component.html
@@ -11,7 +11,7 @@
               ></span>
             </div>
             <div class="uk-width-expand">
-              <h3 class="uk-card-title uk-margin-remove-bottom">Cadastrar</h3>
+              <h3 class="uk-card-title uk-margin-remove-bottom">Avaliações</h3>
             </div>
           </div>
         </div>
@@ -35,13 +35,13 @@
             </div>
             <div class="uk-width-expand">
               <h3 class="uk-card-title uk-margin-remove-bottom">
-                Pontuar/Prêmiar
+                Bonificar
               </h3>
             </div>
           </div>
         </div>
         <div class="uk-card-footer-small uk-padding-small">
-          <a routerLink="/pontuacao" class="uk-button uk-button-text">Abrir</a>
+          <a routerLink="/point" class="uk-button uk-button-text">Abrir</a>
         </div>
       </div>
     </div>
@@ -72,14 +72,12 @@
               <span class="uk--primary " uk-icon="icon:cog; ratio:1.6 "></span>
             </div>
             <div class="uk-width-expand">
-              <h3 class="uk-card-title uk-margin-remove-bottom">
-                Configurações
-              </h3>
+              <h3 class="uk-card-title uk-margin-remove-bottom">Fidelidade</h3>
             </div>
           </div>
         </div>
         <div class="uk-card-footer-small uk-padding-small">
-          <a routerLink="/config" class="uk-button uk-button-text">Abrir</a>
+          <a routerLink="/config/listPoint" class="uk-button uk-button-text">Abrir</a>
         </div>
       </div>
     </div>
