--- a/src/app/Page/settings/program-loyalty/config-punctuation/list-programa/list-program.component.html
+++ b/src/app/Page/settings/program-loyalty/config-punctuation/list-programa/list-program.component.html
@@ -5,7 +5,7 @@
 
 <div class="uk-text-left">
     <!--<h4 style="text-align:left">campanha!</h4>-->
-    <a class="uk-button uk-button-primary BotaoSucesso" (click)="openDialog(null)"> <i uk-icon="icon: plus-circle; ratio: 1.1" ></i> Criar novo </a>
+    <a class="uk-button uk-border-rounded BotaoSucesso" (click)="openDialog(null)"><i uk-icon="icon: plus-circle; ratio: 1.1" ></i> Criar novo </a>
 </div>
 <hr>
 <table class="uk-table uk-table-hover uk-table-divider">
