--- a/src/app/Page/Account/login/login.component.html
+++ b/src/app/Page/Account/login/login.component.html
@@ -1,36 +1,73 @@
-<div class="uk-flex-center FundoLogin autoHeight" uk-grid>
-  <div class="uk-width-1-3@s">
-    <div class="uk-text-center uk-margin-large-top uk-margin-medium-bottom uk-light ">
-      <a class=" uk-text-large uk-active uk-link-heading " style="font-family:Cocon">pontua <a style="font-family:Lucida Handwriting"> Aê</a>
+<div class="FundoLogin uk-width-1-1 autoHeight">
+  <div
+    class=" uk-container uk-container-xsmall  uk-section uk-padding uk-text-center uk-light "
+  >
+    <a
+      class=" uk-text-large uk-active uk-link-heading"
+      style="font-family:Cocon"
+    >
+      pontua <a style="font-family:Lucida Handwriting"> Aê</a>
     </a>
+  </div>
+  <app-carregar *ngIf="carregando"></app-carregar>
+
+  <div class=" uk-flex uk-flex-center uk-text-center">
+    <div class="uk-card uk-card-default uk-card-body uk-border-rounded" uk-grid>
+      <div class="uk-width-1-2">
+        <img class="pq-width" src="../../../../assets/img/roller-coaster.png" />
+      </div>
+
+      <div class="uk-width-1-2">
+        <form [formGroup]="form">
+          <h3 class="uk-card-title">Autentique-se</h3>
+          <div class="uk-margin">
+            <input
+              class="uk-input uk-form-large"
+              formControlName="Email"
+              type="text"
+              [ngClass]="{
+                'uk-form-danger':
+                  !form.controls.Email.valid && !form.controls.Email.pristine
+              }"
+              placeholder="Email"
+            />
+          </div>
+          <div class="uk-margin">
+            <input
+              class="uk-input uk-form-large"
+              formControlName="Senha"
+              type="password"
+              [ngClass]="{
+                'uk-form-danger':
+                  !form.controls.Senha.valid && !form.controls.Senha.pristine
+              }"
+              placeholder="Senha"
+            />
+          </div>
+
+          <a href="" class="">Esqueci minha senha</a>
+          <div class="uk-margin uk-text-right">
+            <button
+              class="uk-button uk-button-default"
+              [disabled]="form.invalid"
+              (click)="submit()"
+              (click)="displayBanner()"
+            >
+              Entrar
+            </button>
+          </div>
+          <div class="uk-padding-small-bottom">
+            <p class="uk-text-center">
+              <a
+                href="/cadastrar"
+                class="uk-width-1-1@m uk-button-large uk-button  uk-border-rounded BotaoSucesso"
+                >Quero me Cadastrar</a
+              >
+              <br />
+            </p>
+          </div>
+        </form>
+      </div>
     </div>
-<app-carregar *ngIf="carregando" ></app-carregar>
-   <form [formGroup]="form">
-    <div class="uk-card uk-card-default  uk-card-body uk-border-rounded">
-      <h3 class="uk-card-title">Autentique-se</h3>
-      <div class="uk-margin">
-        <input class="uk-input uk-form-large" formControlName="Email"  type="text" [ngClass]="{'uk-form-danger': (!form.controls.Email.valid && !form.controls.Email.pristine) }"  placeholder="Email">
-      </div>
-      <div class="uk-margin">
-        <input class="uk-input uk-form-large" formControlName="Senha" type="password" [ngClass]="{'uk-form-danger': (!form.controls.Senha.valid && !form.controls.Senha.pristine)}"  placeholder="Senha">
-      </div>
-
-      <a href="" class="">Esqueci minha senha</a>
-      <div class="uk-margin uk-text-right">
-        <button class="uk-button uk-button-default" [disabled]="form.invalid" (click)="submit()" (click)="displayBanner()">Entrar
-        </button>
-      </div>
-      <div class="uk-padding-small-bottom">
-        <p class="uk-text-center">
-          <a href="/cadastrar" class="uk-width-1-1@m uk-button-large uk-button  uk-border-rounded BotaoSucesso">Quero me Cadastrar</a>
-          <br>
-    
-        </p>
-      </div>
-    </div>
-
-  </form>
-
-
   </div>
 </div>
