--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <!--app-perfil></app-perfil-->
-<!--<app-navbar></app-navbar>
-<app-nav></app-nav>
 
-<router-outlet></router-outlet>-->
-<router-outlet ></router-outlet>
+<router-outlet></router-outlet> <router-outlet></router-outlet>
