--- a/src/styles.css
+++ b/src/styles.css
@@ -8,8 +8,19 @@
 .autoHeight {
   height: 100vh;
 }
+
 .FundoLogin {
-  background: linear-gradient(60deg, #d6085e 25%, #800691 100%);
+  background: #aa076b; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #61045f,
+    #aa076b
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #61045f,
+    #aa076b
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 .BotaoSucesso {
   background-color: #3fa845;
@@ -35,24 +46,36 @@
   text-overflow: ellipsis;
 }
 
-
-
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
-.jumbotron{
-    padding-top: 0px;
-    background: #fff;
+.jumbotron {
+  padding-top: 0px;
+  background: #fff;
 }
 
-.form-control,.input-group-text{
-    border:1px solid #0080ff;
+.form-control,
+.input-group-text {
+  border: 1px solid #0080ff;
 }
 
-table.table-hover tbody tr:hover{
-cursor: pointer;
+table.table-hover tbody tr:hover {
+  cursor: pointer;
 }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+.lg-width {
+  width: 950px;
+}
+.pq-width {
+  width: 450px;
+}
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
