--- a/src/app/Page/Shared/nav/nav.component.html
+++ b/src/app/Page/Shared/nav/nav.component.html
@@ -1,10 +1,13 @@
-<div *ngIf="!show" class="uk-visible@m uk-heightuk-height-1-1 uk-padding-remove-bottom uk-position-left uk-overlay-default uk-margin-large-top uk-flex-middle ">
+<div  class="uk-visible@m uk-heightuk-height-1-1 uk-padding-remove-bottom uk-position-left uk-overlay-default uk-margin-large-top uk-flex-middle ">
    <!--MENU LATERAL-->
-    <ul class="uk-nav uk-nav uk-width-auto uk-padding-small uk-iconnav uk-iconnav-vertical" uk-sortable="cls-custom: uk-box-shadow-small uk-flex uk-flex-middle uk-background">
+    <ul class="uk-nav uk-width-auto uk-padding-small uk-iconnav uk-iconnav-vertical uk-tab-hight" uk-tab  uk-sortable="cls-custom: uk-box-shadow-small uk-flex uk-flex-middle uk-background">
       
-        <li class="uk-margin-small-bottom uk-margin-small-top uk-icon  "><a  routerLink="/home" uk-icon="icon: home; ratio:1.2"></a></li>
-        <li class="uk-margin-small-bottom"><a href="#" uk-icon="icon: star; ratio:1.2"></a></li>
-        <li class="uk-margin-small-bottom"><a href="#" uk-icon="icon: star; ratio:1.2"></a></li>
-        <li class="uk-margin-small-bottom"><a href="#" uk-icon="icon: star; ratio:1.2"></a></li>
+        <li class="uk-margin-small-bottom uk-active "uk-tooltip="title: Visão Geral; delay: 100; pos: right"><a routerLink="/home"><i class="cor large material-icons">home</i></a></li>
+        <li class="uk-margin-small-bottom" uk-tooltip="title: Clientes; delay: 100; pos: right"><a routerLink="/listClientPage"><i class="cor large material-icons corIconNav ">people</i></a></li>
+        <li class="uk-margin-small-bottom" uk-tooltip="title: Histórico; delay: 100; pos: right"><a routerLink="/listHistoricoPage"><i class="cor large material-icons corIconNav">history</i></a></li>
+        <li class="uk-margin-small-bottom" uk-tooltip="title: Marketing; delay: 100; pos: right"><a routerLink="/home"><i class="cor fa fa-bullhorn fa-1x"></i></a></li>
+        <li class="uk-margin-small-bottom" uk-tooltip="title: Relatórios; delay: 100; pos: right"><a routerLink="/home"><i class="cor large material-icons">assignment</i></a></li>
+        <li class="uk-margin-small-bottom" uk-tooltip="title: Precisa de Ajuda?; delay: 100; pos: right"><a routerLink="/home"><i class="cor large material-icons">help_outline</i></a></li>
+        <li class="uk-margin-small-bottom" uk-tooltip="title: Controle de Usuários; delay: 100; pos: right"><a routerLink="/home"><i class="cor large material-icons">person</i></a></li>
     </ul>
 </div>
