--- a/src/app/Page/settings/program-loyalty/config-awards/award-list/award-list.component.html
+++ b/src/app/Page/settings/program-loyalty/config-awards/award-list/award-list.component.html
@@ -1,31 +1,33 @@
-
-
 <div class="uk-text-right">
-    <!--<h4 style="text-align:left">campanha!</h4>-->
-    <a class="uk-button uk-border-rounded BotaoSucesso"><i uk-icon="icon: plus-circle; ratio: 1.1" ></i>Adicionar</a>
+  <!--<h4 style="text-align:left">campanha!</h4>-->
+  <button class=" uk-button buttonPlus uk-border-rounded  " (click)="openDialogCreate()"><i
+      uk-icon="icon: plus-circle; ratio: 1.1"></i>Adicionar</button>
 </div>
-<hr>
 
 <table class="uk-table uk-table-hover uk-table-divider">
-    <thead>
-      <tr>
-        <th>Premio</th>
-        <th>Descrição</th>
-        <th>Pontos</th>
-        <th>Quantidade</th>
-        <th> </th>
-      </tr>
-    </thead>
-    <tbody >
-        <tr *ngIf="Premio$"></tr>
-        <td class="font-italic text-center" colspan="5">
-        <p style="text-align:center"><b>Nenhum  Prêmio cadastrado!</b></p>
-        </td>
-      <tr *ngFor="let coluna of Premio$ | async  ">
-    <td>{{coluna.premio}}</td> 
-    <td>{{coluna.descricao}}</td>  
-    <td>{{coluna.pontos}}</td>   
-    <td>{{coluna.quantidade}}</td>  
+  <thead>
+    <tr>
+      <th>Premio</th>
+      <th>Descrição</th>
+      <th>Pontos</th>
+      <th>Quantidade</th>
+      <th> </th>
     </tr>
-    </tbody>
-  </table>
+  </thead>
+  <tbody>
+   
+
+    <tr *ngFor="let coluna of Award$ | async  ">
+      <td hidden>{{coluna.id}}</td>
+      <td>{{coluna.premio}}</td>
+      <td>{{coluna.descricao}}</td>
+      <td>{{coluna.pontos}}</td>
+      <td>{{coluna.quantidade}}</td>
+      <td><button class="btn btn-success" (click)="openDialogEdit(colum.id)"><i class="Small material-icons"
+            style="color:#800691">remove_red_eye</i></button>
+        <button class="btn btn-success" (click)="openDialogDelete(colum.id)" style="margin-left: 20px;"><i
+            class=" Small material-icons" style="color:#c52626">delete</i></button>
+      </td>
+    </tr>
+  </tbody>
+</table>
