--- a/src/app/Page/settings/program-loyalty/config-point.ts/point-create/point-create.component.html
+++ b/src/app/Page/settings/program-loyalty/config-point.ts/point-create/point-create.component.html
@@ -1,15 +1,40 @@
 
 
-<form [formGroup]="form">
-    <div class="uk-margin">
-      <input class="uk-input" type="text" placeholder="R$ Informe Valor gasto para virar pontos">
+<form [formGroup]="form" >
+
+   <div class="uk-margin"><!--OBS: adicionar hidden no input abaixo para oculta campo-->
+      <input class="uk-input uk-form-default"  formControlName="Id" type="text" placeholder="Id do Programa de fidelidade"
+      [ngClass]="{'uk-form-danger': (!form.controls.Id.valid && !form.controls.Id.pristine) }">
+    </div>
+
+
+
+  <div class="uk-margin">
+      <input class="uk-input uk-form-default" formControlName="Nome" type="text" placeholder="Nome do programa de fidelidade"
+      [ngClass]="{'uk-form-danger': (!form.controls.Nome.valid && !form.controls.Nome.pristine) }">
     </div>
     <div class="uk-margin">
-      <input class="uk-input" type="text" placeholder="Equivalem a quantos pontos">
-    </div>
-    <div class="uk-margin">
-      <input class="uk-input" type="text" placeholder="Validades dos Pontos/Dia">
-    </div>
-    <button class="uk-button uk-button-primary">Cadastrar</button>
-    <button class="uk-button uk-button-default" [mat-dialog-close]>Fechar</button>
+        <input class="uk-input uk-form-default" formControlName="Descricao"  type="text" placeholder="Descrição do programa de fidelidade"
+        [ngClass]="{'uk-form-danger': (!form.controls.Descricao.valid && !form.controls.Descricao.pristine) }">
+      </div>
+  <div class="uk-margin">
+    <input class="uk-input uk-form-default" uk-tooltip="Adicionar Sugestão dica" formControlName="Valor" type="text" placeholder="R$ Informe Valor gasto para virar pontos"
+    [ngClass]="{'uk-form-danger': (!form.controls.Valor.valid && !form.controls.Valor.pristine) }">
+  </div>
+  <div class="uk-margin">
+    <input class="uk-input uk-form-default" formControlName="Ponto" type="text" placeholder="Equivalem a quantos pontos"
+    [ngClass]="{'uk-form-danger': (!form.controls.Ponto.valid && !form.controls.Ponto.pristine) }">
+  </div>
+  <div class="uk-margin">
+    <input class="uk-input uk-form-default" type="text" formControlName="Validacao"
+    [ngClass]="{'uk-form-danger': (!form.controls.Validacao.valid && !form.controls.Validacao.pristine)}"
+    placeholder="Validades dos Pontos/Dia">
+  </div>
+  <!--Button-->
+  <div class="uk-text-right">
+    <button class="uk-button buttonSave uk-border-rounded"[disabled]="form.invalid"  (click)="submit()" >Salvar</button>
+
+  <button class="uk-button uk-button-default uk-border-rounded"  (click)="CloseDialog()">Fechar</button>
+  </div>
+  
 </form>
