--- a/src/app/Page/Home/cardgroup/cardgroup.component.html
+++ b/src/app/Page/Home/cardgroup/cardgroup.component.html
@@ -5,24 +5,15 @@
         <div class="uk-card-header">
           <div class="uk-grid-small " uk-grid>
             <div class="uk-width-auto">
-              <span
-                class="uk--primary "
-                uk-icon="icon:users; ratio:1.6 "
-              ></span>
+                <i class=" Medium material-icons" style="font-size: 30px; padding: -20px; margin: -5px; color: #7b098a">sentiment_very_satisfied</i>
             </div>
             <div class="uk-width-expand">
-              <h3 class="uk-card-title uk-margin-remove-bottom">Avaliações</h3>
+           
+              <a routerLink="/preCadastro" class=" uk-button uk-button-text">Avaliações</a>
             </div>
           </div>
         </div>
-        <div class="uk-card-footer-small uk-padding-small">
-          <a
-            class="uk-button uk-button-text"
-            routerLink="/preCadastro"
-            routerLinkActive="active"
-            >Abrir</a
-          >
-        </div>
+        
       </div>
     </div>
 
@@ -31,18 +22,15 @@
         <div class="uk-card-header">
           <div class="uk-grid-small " uk-grid>
             <div class="uk-width-auto">
-              <span class="" uk-icon="icon:happy; ratio:1.6 "></span>
+                <i class=" Medium material-icons" style="font-size: 30px; padding: -20px; margin: -5px; color:#7b098a">stars</i>
             </div>
-            <div class="uk-width-expand">
-              <h3 class="uk-card-title uk-margin-remove-bottom">
-                Bonificar
-              </h3>
+            <div class="uk-width-expand " >
+                <a routerLink="/point" class="uk-button uk-button-text">Bonificar</a>
+              
             </div>
           </div>
         </div>
-        <div class="uk-card-footer-small uk-padding-small">
-          <a routerLink="/point" class="uk-button uk-button-text">Abrir</a>
-        </div>
+       
       </div>
     </div>
 
@@ -51,16 +39,16 @@
         <div class="uk-card-header">
           <div class="uk-grid-small " uk-grid>
             <div class="uk-width-auto">
-              <span class="uk--primary " uk-icon="icon: rss; ratio:1.6 "></span>
+               
+               <a><i class="fa fa-rocket fa-3x" aria-hidden="true"  style="font-size: 30px; color: #7b098a"></i></a>
+       
             </div>
             <div class="uk-width-expand">
-              <h3 class="uk-card-title uk-margin-remove-bottom">Automações</h3>
+                <a routerLink="" class=" uk-button uk-button-text">Automações</a>
+              
             </div>
           </div>
-        </div>
-        <div class="uk-card-footer-small uk-padding-small">
-          <a href="#" class="uk-button uk-button-text">Abrir</a>
-        </div>
+        </div>     
       </div>
     </div>
 
@@ -68,17 +56,15 @@
       <div class="uk-card uk-card-default ">
         <div class="uk-card-header">
           <div class="uk-grid-small " uk-grid>
-            <div class="uk-width-auto">
-              <span class="uk--primary " uk-icon="icon:cog; ratio:1.6 "></span>
+            <div class="uk-width-auto">              
+               <a routerLink="/config/listPoint"><i class=" large material-icons" style="font-size: 30px; padding: -20px; margin: -5px; color: #7b098a">loyalty</i></a> 
             </div>
             <div class="uk-width-expand">
-              <h3 class="uk-card-title uk-margin-remove-bottom">Fidelidade</h3>
+              <a routerLink="/config/listPoint" class=" uk-button uk-button-text">Fidelidade</a>
             </div>
           </div>
         </div>
-        <div class="uk-card-footer-small uk-padding-small">
-          <a routerLink="/config/listPoint" class="uk-button uk-button-text">Abrir</a>
-        </div>
+       
       </div>
     </div>
   </div>
