--- a/src/app/Page/Shared/navbar/navbar.component.html
+++ b/src/app/Page/Shared/navbar/navbar.component.html
@@ -37,7 +37,7 @@
       <h3>Menu</h3>
       <ul class="uk-nav uk-nav-default">
 
-        <li><a href="#"><span class="uk-margin-small-right" uk-icon="icon: table"></span> </a>  </li>
+        <!--<li><a href="#"><span class="uk-margin-small-right" uk-icon="icon: table"></span> </a>  </li>-->
         <li><a href="#"><span class="uk-margin-small-right" uk-icon="icon: thumbnails"></span> Item</a></li>
 
         <li><a href="#"><span class="uk-margin-small-right" uk-icon="icon: trash"></span> Item</a></li>
