--- a/src/app/Page/settings/program-loyalty/config-awards/award-create/award-create.component.html
+++ b/src/app/Page/settings/program-loyalty/config-awards/award-create/award-create.component.html
@@ -1,29 +1,20 @@
-<p>award-create works!</p>
+<form [formGroup]="form">
 
-
-
-<form [formGroup]="form" >
-    <fieldset class="uk-fieldset ">
-      <div uk-grid>
-      <div class=" uk-margin-small uk-width-1-1@m">
-        <input class="uk-input" type="text" placeholder="Nome do prêmio">
-      </div>
-      <div class="uk-width-1-1@m uk-margin-small">
-        <input class="uk-input" type="text" placeholder="Descrição do  prêmio">
-      </div>
-  
-      <div class="uk-width-1-2@m uk-margin-small">
-        <input class="uk-input " type="text" placeholder="Quantidade de pontos para prêmio">
-      </div>
-  
-      <div  class="uk-width-1-2@m uk-margin-small">
-        <input class="uk-input " type="text" placeholder="Quantidade de prêmios disponíveis">
-      </div>
-    </div>
-    </fieldset>
-    
-    <div class="uk-margin-small">
-      <button class="uk-button uk-button-primary">Salvar</button>
-      <button class="uk-button BotaoSucesso" [mat-dialog-close]>Fechar</button>
-    </div>
-  </form>
+  <div class="uk-margin">
+    <input class="uk-input uk-form-default" formControlName="Id" type="text" placeholder="ID do Prêmio">
+  </div>
+  <div class="uk-margin">
+    <input class="uk-input uk-form-default" formControlName="Nome" type="text" placeholder="Nome do prêmio">
+  </div>
+  <div class="uk-margin">
+    <input class="uk-input uk-form-default" formControlName="Descricao" type="text" placeholder="Descrição do prêmio">
+  </div>
+  <div class="uk-margin">
+    <input class="uk-input uk-form-default" formControlName="PontosNecessario" type="text"
+      placeholder="Quantidade de Pontos">
+  </div>
+  <div class="uk-text-right">
+    <button class="uk-button buttonSave uk-border-rounded" (click)="submit()">Salvar</button>
+    <button class="uk-button uk-button-default uk-border-rounded" [mat-dialog-close]>Fechar</button>
+  </div>
+</form>
