--- a/src/app/Page/settings/program-loyalty/config-point.ts/list-program/list-program.component.html
+++ b/src/app/Page/settings/program-loyalty/config-point.ts/list-program/list-program.component.html
@@ -1,28 +1,30 @@
-<div class="uk-text-left">
-    <!--<h4 style="text-align:left">campanha!</h4>-->
-    <a class="uk-button uk-border-rounded BotaoSucesso" (click)="openDialog(null)"><i uk-icon="icon: plus-circle; ratio: 1.1" ></i> Criar novo </a>
+<div class="uk-text-right">
+  <!--<h4 style="text-align:left">campanha!</h4>-->
+  <button class="uk-button buttonPlus uk-border-rounded" (click)="openDialogCreate()">
+    <i uk-icon="icon: plus-circle; ratio: 1.1"></i> Criar novo </button>
+
 </div>
-<hr>
 <table class="uk-table uk-table-hover uk-table-divider">
-    <thead>
-      <tr>
-        
-        <th>Nome</th>
-        <th>Descrição</th>
-        <th>Validade</th>
-        <th> </th>
-      </tr>
-    </thead>
-    <tbody >
-        <tr *ngIf="List$"></tr>
-        <td class="font-italic text-center" colspan="5">        
-        <p style="text-align:center"><b>Precisa criar campanha!</b></p>
-        </td>
-      <tr *ngFor="let coluna of List$ | async  ">
-    
-    <td>{{coluna.nome}}</td>  
-    <td>{{coluna.descricao}}</td>   
-    <td>{{coluna.validade}}</td>  
+  <thead>
+    <tr>
+
+      <th>Nome</th>
+      <th>Descrição</th>
+      <th>Validade</th>
+      <th> </th>
     </tr>
-    </tbody>
-  </table>
+  </thead>
+  <tbody>
+     
+    <tr *ngFor="let colum of List$ | async">
+      <td>{{colum.nome}}</td>
+      <td>{{colum.descricao}}</td>
+      <td>{{colum.validade}}</td>
+      <td><button class="btn btn-success" (click)="openDialogEdit(colum.id)"><i class="Small material-icons"
+            style="color:#800691">remove_red_eye</i></button>
+        <button class="btn btn-success" (click)="openDialogDelete(colum.id)" style="margin-left: 20px;"><i
+            class=" Small material-icons" style="color:#c52626">delete</i></button>
+      </td>
+    </tr>
+  </tbody>
+</table>
