--- a/src/app/Page/Home/cardgroup/cardgroup.component.html
+++ b/src/app/Page/Home/cardgroup/cardgroup.component.html
@@ -69,3 +69,25 @@
     </div>
   </div>
 </div>
+<!--FRONT RASCUNHO-->
+
+<div class="uk-container uk-margin-top">
+  <div class="uk-child-width-1-2@s uk-text-center" uk-grid>
+    <div>
+      <div class="uk-card uk-card-default ">
+        <div class="uk-card-header">
+          <div class="uk-grid-small " uk-grid>
+            <div class="uk-width-auto">
+                <i class=" Medium material-icons" style="font-size: 30px; padding: -20px; margin: -5px; color: #7b098a">sentiment_very_satisfied</i>
+            </div>
+            <div class="uk-width-expand">
+           
+              <a routerLink="/preCadastro" class=" uk-button uk-button-text">Avaliações</a>
+            </div>
+          </div>
+        </div>
+        
+      </div>
+    </div>
+  </div>
+</div>
